# trivia-dash

./: .gdformatrc  .gdlintrc  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  DESIGN.md  LICENSE  Makefile  README.md  THIRD_PARTY_LICENSES  TODO.md  export_presets.cfg  icon.svg.import  minify-todo.md  package-lock.json  package.json  project.godot  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  update-godot.yml  update-gut.yml
addons/: gut
data/: questions.json
data/questions/: README.md  _dev-text-stress.json  animal-kingdom-superlatives.json  badly-explained-plots.json  categories.json  emoji-cryptograms.json  fictional-corporate-giants.json  foodie-geography.json  historical-which-came-first.json  logo-logic.json  pop-culture-math.json  real-or-fake.json  slogans-jingles.json  (+5 more)
docs/: question-prompt.txt
fonts/: LICENSE  NotoColorEmoji-subset.ttf.import  NotoColorEmoji.ttf.import  NotoEmoji-subset.ttf.import  NotoEmoji.ttf.import  NotoSans-subset.ttf.import  NotoSans.ttf.import  README.md
scenes/: main.tscn
scripts/: build_info.gd  build_info.gd.uid  game_data.gd  game_data.gd.uid  generate_questions.py  main.gd  main.gd.uid  question_manager.gd  question_manager.gd.uid  sfx_manager.gd  sfx_manager.gd.uid
test/: test_game_data.gd  test_game_data.gd.uid  test_placeholder.gd  test_placeholder.gd.uid  test_question_manager.gd  test_question_manager.gd.uid  test_text_fitting.gd  test_text_fitting.gd.uid
theme/: default_theme.tres
tools/: extract_characters.py  parse_pck.py  serve.py  validate_questions.py
(+11 files in other folders)
