[project]
name = "trivia-dash"
version = "0.0.0"
requires-python = ">=3.9"

[tool.gdtoolkit]
# Pinned for reproducible linting/formatting across dev machines and CI.

[project.optional-dependencies]
dev = [
    "gdtoolkit>=4,<5",
    "pre-commit>=3,<4",
    "ruff>=0.9",
]
generate = [
    "google-genai>=1",
]

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
