[project]
name = "trivia-dash"
version = "0.0.0"
requires-python = ">=3.9"

[tool.setuptools]
py-modules = []

[tool.gdtoolkit]
# Pinned for reproducible linting/formatting across dev machines and CI.

[project.optional-dependencies]
dev = [
    "gdtoolkit>=4,<5",
    "pre-commit>=4.3.0,<5",
    "ruff>=0.9",
    "fonttools>=4.42",
    "pytest>=8",
]
generate = [
    "google-genai>=1",
    "jinja2>=3",
    "json5>=0.9",
]

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
